# kagenti-native

./: ARCHITECTURE.md  Cargo.toml  Makefile  dump_types_go.go  dump_types_py.py  flake.nix  go.mod  kagenti-daemon.service
agents/: bisque.json  erlan.json  fractran-vm.json  frens.json  harbor-shard58.json  harbot-proof-system.json  harbot.json  jocko-training.json  kiro-feed-uucp.json  kiro-qms.json  kiro-session.json  kiro1-shard42.json  moltboot.json  moltis.json  nixwars-bbs.json  nixwars-flying.json  nixwars-modern.json  nixwars-pilot.json  nixwars-play.json  nixwars-tournament.json  nixwars-url.json  nixwars.json  openclaw.json  solfunmeme-cloudflare.json  solfunmeme-github-pages.json  solfunmeme-huggingface.json  solfunmeme-netlify.json  solfunmeme-oracle-oci.json  solfunmeme-render.json  solfunmeme-service.json  solfunmeme-supabase.json  solfunmeme-vercel.json  zombie-driver2.json  zos-server.json
dasl-dump/: agent-triples.cbor  git-issue-agent-runtime.cbor  git-issue-agent.cbor  kagenti-types.tar  manifest.cbor  mcp-tools.cbor  web-search-tool.cbor
dasl-dump-go/: agent_summary.json  delete_response.cbor  delete_response.json  mcp_tools.cbor  mcp_tools.json  tool_summary.cbor  tool_summary.json
dasl-dump-py/: agent_summary.cbor  agent_summary.json  delete_response.json  mcp_tools.cbor  mcp_tools.json  namespace_list.cbor  namespace_list.json  tool_summary.json
kagenti-api/: Cargo.toml
kagenti-api/src/: dump_types.rs  lib.rs  routes.rs  types.rs
kagenti-ctl/: Cargo.toml
kagenti-daemon/: Cargo.toml
kagenti-daemon/src/: main.rs  systemd.rs
(+12 files in other folders)
