[workspace]
members = ["kagenti-api", "kagenti-daemon", "kagenti-rmq", "kagenti-nix", "kagenti-wg", "kagenti-rec", "kagenti-tmux", "kagenti-ctl"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
