[package]
name = "kagenti-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
kagenti-api = { path = "../kagenti-api" }
kagenti-rmq = { path = "../kagenti-rmq" }
kagenti-nix = { path = "../kagenti-nix" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
dirs = "5"
